Cleanup Remnant Flow functionality
